# thinkbox-my-library

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  NOTICE.txt  README.md  build.py  conanfile.py  stdafx.h
MayaSDKConan/: build.py  conanfile.py
frantic/maya/: MPxParticleStream.hpp  PRTMayaParticle.hpp  PRTObject_base.hpp  attributes.hpp  convert.hpp  maya_util.hpp  plugin_manager.hpp  shelf.hpp  type.hpp  util.hpp
frantic/maya/animation/: animation_data.hpp
frantic/maya/geometry/: edge_smoothing.hpp  mesh.hpp
frantic/maya/graphics/: maya_space.hpp  opengl.hpp
frantic/maya/logging/: progress_bar_progress_logger.hpp
frantic/maya/particles/: maya_geometry_vert_particle_istream.hpp  particles.hpp  texture_evaluation_particle_istream.hpp
src/maya/: MPxParticleStream.cpp  PRTMayaParticle.cpp  PRTObject_base.cpp  maya_util.cpp  plugin_manager.cpp  shelf.cpp  type.cpp  util.cpp
src/maya/animation/: animation_data.cpp
src/maya/geometry/: edge_smoothing.cpp  mesh.cpp
src/maya/graphics/: maya_space.cpp  opengl.cpp
src/maya/logging/: progress_bar_progress_logger.cpp
src/maya/particles/: maya_geometry_vert_particle_istream.cpp  particles.cpp  texture_evaluation_particle_istream.cpp
